--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- teleport target -->
-    <div id="modals"></div>
+    <div id="modals" class="bg-white w-3/4 h-3/4"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
